--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "tsc -w",
+    "build": "tsc"
   },
   "author": "",
   "license": "SEE LICENSE IN proprietary",
   "devDependencies": {
-    "@types/node": "^14.10.2"
+    "@types/node": "^14.10.2",
+    "typescript": "^4.0.3"
   }
 }
